--- a/package.json
+++ b/package.json
@@ -17,46 +17,51 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@babel/core": "^7.26.0",
+    "@expo/metro-runtime": "~6.1.2",
     "@expo/react-native-action-sheet": "^4.1.0",
-    "@expo/vector-icons": "^14.0.2",
-    "@react-native-community/datetimepicker": "8.0.1",
-    "@react-native-picker/picker": "2.7.5",
-    "@react-navigation/native": "^6.0.2",
-    "@react-navigation/stack": "^6.4.1",
-    "expo": "~51.0.39",
-    "expo-constants": "~16.0.2",
-    "expo-document-picker": "~12.0.2",
-    "expo-file-system": "~17.0.1",
-    "expo-font": "~12.0.9",
-    "expo-linear-gradient": "~13.0.2",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.24",
-    "expo-sharing": "~12.0.1",
-    "expo-splash-screen": "~0.27.7",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-web-browser": "~13.0.3",
+    "@expo/vector-icons": "^15.0.2",
+    "@react-native-community/datetimepicker": "8.4.4",
+    "@react-native-picker/picker": "2.11.1",
+    "@react-navigation/native": "^7.1.8",
+    "@react-navigation/stack": "^7.4.8",
+    "@types/react": "~19.1.10",
+    "expo": "^54.0.6",
+    "expo-constants": "~18.0.8",
+    "expo-document-picker": "~14.0.7",
+    "expo-file-system": "~19.0.14",
+    "expo-font": "~14.0.8",
+    "expo-linear-gradient": "~15.0.7",
+    "expo-linking": "~8.0.8",
+    "expo-router": "~6.0.3",
+    "expo-sharing": "~14.0.7",
+    "expo-splash-screen": "~31.0.10",
+    "expo-status-bar": "~3.0.8",
+    "expo-system-ui": "~6.0.7",
+    "expo-web-browser": "~15.0.7",
     "firebase": "^11.6.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
+    "jest-expo": "~54.0.11",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
     "react-native-animatable": "^1.4.0",
     "react-native-document-picker": "^9.3.1",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.0",
+    "react-native-worklets": "^0.5.1",
+    "typescript": "~5.9.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.26.0",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.2.45",
-    "@types/react-test-renderer": "^18.0.7",
+    "@types/react": "~19.1.10",
     "jest": "^29.2.1",
-    "jest-expo": "~51.0.3",
-    "react-test-renderer": "18.2.0",
-    "typescript": "~5.3.3"
+    "jest-expo": "~54.0.11",
+    "react-test-renderer": "19.1.0",
+    "typescript": "~5.9.2"
   },
   "private": true
 }
